# codor

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  db.ts  i18n.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: IntroModal.tsx  Sidebar.tsx
src/hooks/: useCodorRuntime.ts
src/lib/: store.ts  utils.ts
src/pages/: About.tsx  AgentConfig.tsx  BackupManager.tsx  ChatPage.tsx  CommandFilters.tsx  DevOpsSkills.tsx  Vault.tsx
