[package]
name = "codor"
version = "0.2.2"
description = "Codor — AI infrastructure agent with human-in-the-loop command execution"
authors = ["Webito Future Tech s.r.o."]
license = "GPL-3.0-only"
repository = "https://github.com/codor-dev/codor"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2.4.0", features = ["sqlite"] }
tauri-plugin-store = "2.4.3"
rusqlite = { version = "0.31", features = ["bundled"] }
tar = "0.4"
flate2 = "1.0"
# OS keychain for secrets at rest. Pure-Rust secret-service backend on Linux
# (zbus + crypto-rust) avoids native libdbus/openssl build dependencies.
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"] }


